[package]
name = "wasm-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = { git = "https://github.com/bytecodealliance/wasip3-prototyping", features = ["component-model-async"] }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasip3-prototyping"}
tokio = { version = "1", features = ["full"] }
anyhow = "*"
